# lambda-fun

./: README.org
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.cpp
src/lambda_fun/: CMakeLists.txt  boolean.cpp  boolean.h  boolean.t.cpp  lambda_fun.cpp  lambda_fun.h  lambda_fun.t.cpp  pair.cpp  pair.h  pair.t.cpp
